@@ -2,6 +2,11 @@
 VERSION 0.6.4cvs
 ================
 
+2005-02-06  Vincent Richard  <vincent@vincent-richard.net>
+
+ * mailboxList.{cpp|hpp}: dropped protected inheritance which was not
+   appropriate for this type of composition.
+
 2005-02-05  Vincent Richard  <vincent@vincent-richard.net>
 
  * parserHelpers.hpp: moved 'static' functions into 'parserHelpers' class.
